--- a/.github/config.yml
+++ b/.github/config.yml
@@ -1,5 +1,5 @@
-PR_TITLE_REGEX: /((?:[a-z][a-z]+))(\d{3})(:)([a-z0-9])/i
-COMMIT_MESSAGE_REGEX: /(#)(#)((?:[a-z][a-z]+))(\d{3})(:)([a-z0-9])/i
+PR_TITLE_REGEX: <PR Title Regex>
+COMMIT_MESSAGE_REGEX: <Commit Message Regex>
 OUTPUT_TITLE_FAIL: Message validation failed!!!
 OUTPUT_TITLE_SUCCESS: Message validation passed!!!
 VALID_COMMIT_MESSAGE: Commit messages are valid
