--- a/.github/mergeable.yml
+++ b/.github/mergeable.yml
@@ -4,74 +4,56 @@ mergeable:
     validate:
       - do: title
         must_include:
-          regex: (^[A-z]+(-| )[0-9]+(:|-| )(\w|\W)+$)
+          regex: '(^[A-z]+(-| )[0-9]+(:|-| )(\w|\W)+$)'
     pass:
       - do: comment
         payload:
           body: >
-           <h2>Successfully checked</h2>
-           <h3>Your PR title is correct - following the template :) fuck you JIRA-IDs. Ready for Review!</h3>
+           <h2>Successfully checked PR Title</h2>
+           <h3>Your PR title is correct - following the template JIRA-IDs, Ready for Review!</h3>
+      - do: checks
+        status: 'success' 
     fail:
       - do: comment
         payload:
           body: >
             :warning:
-            <h2>Why? you dumb ass bitch</h2>
+            <h2>Please add Jira ticket id i.e. "JIRA-ID"</h2>
+            <h3>Check Fail!!!!</h3>     
+      - do: checks
+        status: 'fail'                       
   - when: pull_request.*, pull_request_review.*
     validate:
       - do: commit
         message:
-          regex: '^(feat|docs|chore|fix|refactor|test|style|perf)(\(\w+\))?:.+$'
+          regex: '^((build|chore|ci|docs|feat|fix|perf|refactor|revert|update|create|style|test)(\(\w+\))?(!)?(: (.*\s*)*))|(Merge (.*\s*)*)|(Initial commit$)'
           message: 'summarize the fix in less than 72 characters'
-        jira:
-          regex: '[A-Z][A-Z0-9]+-\d+'
-          regex_flag: none
-          message: 'The Jira ticket does not exist'
     pass:
       - do: comment
         payload:
           body: >
            <h2>Successfully checked</h2>
            <h3>Commit is yum pum shollay shollay!! /h3>
+      - do: checks
+        status: 'success' 
     fail:
       - do: comment
         payload:
           body: >
             :warning:
-            <h2>Why? you dumb ass bitch PTCL</h2>
+            <h2>Why? you dumb ass bitch PTCL</h2>          
+      - do: checks
+        status: 'fail' 
   - when: pull_request.*, pull_request_review.*
     validate:
-        # All todo check boxes must be checked.
-      - do: description
-        must_exclude:
-          regex: \[ \]
-          message: There are incomplete TODO task(s) unchecked.
-      - do: approvals
-        min:
-          count: 1
-        or:
-          - required:
-              reviewers: [ jusx ]
-          - required:
-              reviewers: [ shine2lay ]
-      - do: or
-        # if the PR is a new feature or a fix, it must be logged in the changelog
-        validate:
-          - do: and
-            validate:
-              - do: title
-                must_include:
-                  regex: ^(feat|fix)(\(\w+\))?:.+$
-              - do: changeset
-                must_include:
-                  regex: 'docs/changelog.rst'
-                  message: 'new features or fixes needed to be logged to the changelog'
-          - do: title
-            must_exclude:
-              regex: ^(feat|fix)(\(\w+\))?:.+$
-              message: 'new features or fixes needed to be logged to the changelog'
+      - do: commit
+        message:
+        must_include:
+          regex: '(^[A-z]+(-| )[0-9]+(:|-| )(\w|\W)+$)'
+          message: 'There are incomplete TODO task(s) unchecked'  
     pass:
-      - do: merge
-        merge_method: 'merge'
       - do: checks
         status: 'success'
+    fail:
+      - do: checks
+        status: 'fail'
